--- a/force-app/main/default/layouts/Margin__c-Truck%2FITT.layout-meta.xml
+++ b/force-app/main/default/layouts/Margin__c-Truck%2FITT.layout-meta.xml
@@ -88,6 +88,24 @@
                 <field>Fixed_Surcharge_GTL_B0__c</field>
             </layoutItems>
         </layoutColumns>
+         <!--added by Swarna PBI-PBI1659161-->
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Sales_Mgn_GTL_B7__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Min_Mgn_GTL_B7__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Night_Surcharges_GTL_B7__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Target_Mgn_GTL_B7__c</field>
+            </layoutItems>
+            <!--end PBi-PBI1659161-->
         <layoutColumns>
             <layoutItems>
                 <behavior>Edit</behavior>
