--- a/force-app/main/default/lwc/rv_priceMarket/rv_priceMarket.css
+++ b/force-app/main/default/lwc/rv_priceMarket/rv_priceMarket.css
@@ -17,6 +17,19 @@
     background-color: white;    
 }
 
+.bgNewWhite {
+    background-color: #fff;
+    box-shadow: 0px 0px 1px #000;
+    -moz-box-shadow: 0px 0px 1px #000;
+    -webkit-box-shadow: 0px 0px 1px #000;
+}
+
+.bgNewGrey {
+    background-color: #f3f3f3;
+    box-shadow: 0 0 0 1px #000;
+    -moz-box-shadow: 0px 0px 1px #000;
+    -webkit-box-shadow: 0px 0px 1px #000;
+}
 
 .tableFixHead {
     overflow: auto;
