BET Trader Changes for MDN

--- a/force-app/main/default/layouts/BET_BDD_Form__c-STUSCO NEW INDVIDUAL FORM.layout-meta.xml
+++ b/force-app/main/default/layouts/BET_BDD_Form__c-STUSCO NEW INDVIDUAL FORM.layout-meta.xml
@@ -300,6 +300,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>MDN_Trader_Name__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>MDN_OI_DistChan__c</field>
             </layoutItems>
             <layoutItems>
