--- a/force-app/main/default/layouts/BET_BDD_Form__c-STUSCO NEW CPT%2FBANK FORM.layout-meta.xml
+++ b/force-app/main/default/layouts/BET_BDD_Form__c-STUSCO NEW CPT%2FBANK FORM.layout-meta.xml
@@ -297,6 +297,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>MDN_Trader_Name__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>MDN_OI_DistChan__c</field>
             </layoutItems>
             <layoutItems>
@@ -752,14 +756,14 @@
     <platformActionList>
         <actionListContext>Record</actionListContext>
         <platformActionListItems>
-            <actionName>Delete</actionName>
-            <actionType>StandardButton</actionType>
-            <sortOrder>1</sortOrder>
-        </platformActionListItems>
-        <platformActionListItems>
             <actionName>BET_BDD_Form__c.Revoke_Approval</actionName>
             <actionType>QuickAction</actionType>
             <sortOrder>0</sortOrder>
+        </platformActionListItems>
+        <platformActionListItems>
+            <actionName>Delete</actionName>
+            <actionType>StandardButton</actionType>
+            <sortOrder>1</sortOrder>
         </platformActionListItems>
     </platformActionList>
     <relatedLists>
